[package]
name = "cash-register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
rusty-money = { version = "0.4.1", features = ["iso"] }
unicode-truncate = "1.1.0"
